fix display bug, debug on ios

--- a/css/primary.css
+++ b/css/primary.css
@@ -16,12 +16,11 @@
 html, body {
     /* Apple style family */
     font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-    /*height: 100%;*/
     margin: 0;
     padding: 0;
 
     /* eliminates sub elements exceed parent problem */
-    /*overflow: scroll;*/
+    /*overflow: visible;*/
 }
 
 /* style from apple */
@@ -31,12 +30,16 @@ html, body {
 
 html {
     width: 100%;
-    /*height: 100%;*/
+    min-height: 100vh;
+    height: auto;
     background-color: white;
     color: var(--orange);
+    /*overflow: hidden;*/
 }
 
 body {
+    min-height: 100vh;
+    height: auto;
     background-color: black;
     animation: open var(--animation-open-duration) ease-in-out var(--animation-deley-open) forwards;
 }
@@ -44,8 +47,8 @@ body {
 .wrapper {
     display: flex;
     flex-flow: column;
-    /*min-height: 100%;*/
-    /*height: auto;*/
+    min-height: 100vh;
+    height: auto;
     margin: 0 var(--page-horizontal-margin);
 }
 
@@ -77,11 +80,14 @@ a:hover {
 .section-header {
     /* keep the line below commented fix display bug for FireFox and Edge */
     /*flex: content;*/
-    flex: 1;
+    /*flex: 1;*/
+    /*flex-basis: min-content;*/
 }
 
 .section-content {
-    flex: 1;
+    flex: auto;
+    display: flex;
+    flex-flow: row;
 
     /* fix bug of 100% in flex */
     /*position:relative;*/
@@ -123,12 +129,12 @@ a:hover {
     background-size: contain;
 
     /* to ensure image bottom is page bottom */
-    min-height: 100%;
-    height: auto;
+    /*min-height: 100%;*/
+    /*height: auto;*/
 }
 
 @media only screen and (max-width: 768px) {
-    .content {
+    .section-content{
         display: flex;
         flex-flow: column;
         height: fit-content;
